--- a/franske-course-information/modules/itc-2480/pages/index.adoc
+++ b/franske-course-information/modules/itc-2480/pages/index.adoc
@@ -1,5 +1,13 @@
 = Future ITC-2480 Home Page
 
-Welcome to my new page!
+== General Course Information
+
+* xref:syllabus.adoc[Course Syllabus]
+* xref:schedule.adoc[Official Course Schedule]
+* xref:assignments.adoc[Course Assignment List and Instructions (Includes Labs & Homework)]
+* xref:lab-reports:index.adoc[Instructions for Writing Lab Reports and Sample Lab Reports]
+* xref:forum-posting:index.adoc[Instructions for Participating in Forum Discussions and Example Posts]
+* Assessments, gradebook, discussion forums are on the https://class.ihitc.net[ITC CLASS Server]
+* xref:tech-info:remote-access:passport-vpn.adoc[VPN Access Instructions]
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
