--- a/technical-information/modules/ROOT/navtop.adoc
+++ b/technical-information/modules/ROOT/navtop.adoc
@@ -3,6 +3,7 @@
 * xref:tech-info:ROOT:index.adoc[Technical Information]
 +
 --
+include::remote-access:partial$nav.adoc[]
 include::voip:partial$nav.adoc[]
 --
 * xref:software-info:ROOT:index.adoc[Software Discounts and Resources]
