--- a/franske-course-information/modules/itc-2300/pages/lab-proxmox-installation.adoc
+++ b/franske-course-information/modules/itc-2300/pages/lab-proxmox-installation.adoc
@@ -16,10 +16,10 @@ You will be assigning static IPs to your systems in this lab. Please use these s
 |HV-B |192.168.1.11 |proxmoxB.podX.itc2300.campus.ihitc.net
 |===
 
-NOTE: Replace podX in the hostname with your pod ID letter such as hv-a.podA.local
+NOTE: Replace podX in the hostname with your pod ID letter such as proxmoxA.podA.itc2300.campus.ihitc.net
 
 == Instructions
-. You will be installing a Proxmox VE server on the two hypervisor (hv) VMs assigned to you (so do all these steps, unless otherwise indicated, on each computer). If you are unsure about how to do something try checking the https://pve.proxmox.com/wiki/Main_Page[Proxmox Wiki site] first.
+. You will be installing a Proxmox VE server on the two hypervisor (HV) VMs assigned to you (so do all these steps, unless otherwise indicated, on each computer). If you are unsure about how to do something try checking the https://pve.proxmox.com/wiki/Main_Page[Proxmox Wiki site] first.
 +
 --
 NOTE: Be sure to use a unique hostname on each Proxmox server, otherwise you will have issues connecting them together in a future lab.
@@ -36,7 +36,7 @@ NOTE: You will need to make a reservation for the Proxmox Labs in this class bef
 
 WARNING: If you need to split your work up across multiple reservations be sure to safely shutdown your Proxmox VMs before ending your Netlab reservation. Otherwise when your reservation ends Netlab will simply power off your VMs (without shutting them down first) which could cause data corruption.
 
-NOTE: If you make a mistake and need to have one or both of your HV VMs erased so you can re-install Proxmox you will need to contact your instructor or the ITC lab assistant to have them reset.
+NOTE: If you make a mistake and need to have one or both of your HV VMs erased so you can re-install Proxmox you will need to access the https://passport.ihitc.net[ITC Passport] interface and select the "View and manage Netlab pods assigned to your account" link. Click on the pod number for your "Virtualization Basics" pod and then click the link to erase the hard disks on the systems you want to reinstall.
 --
 . The Proxmox VE installer ISO file has been pre-loaded into the CD drive of each of your HV VMs
 . Start the Proxmox VE installation (on both VMs) making note of these options:
@@ -62,16 +62,16 @@ TIP: Other students have used the power of Internet searching to find https://te
 . Use PC-C to upload Windows 10 and Linux Mint ISO files to the Proxmox VE server using the web interface
 * You may have problems uploading the ISO files with the Edge browser so Firefox or Chrome is suggested if you have issues uploading
 * The ISO files can be found on internal website http://172.17.139.70:8080 which you can access from PC-C.
-. Try creating both a Windows 10 and Linux Mint VM (only on Proxmox VE server A!) and complete the installation (use KVM as the VM type)
+. Try creating both a Windows 10 and Linux Mint VM (only on Proxmox VE server A!) and complete the installation.
 +
 --
-NOTE: It is recommended that you disconnect/disable the virtual network interface on the Windows 10 system before installing so that you will not need to sign in with a Microsoft account. Don't forget to re-enable the network interface after completing the installation.
+NOTE: It is recommended that you disconnect/disable the virtual network interface on the Windows 10 VM before installing so that you will not need to sign in with a Microsoft account. Don't forget to re-enable the network interface after completing the installation.
 
 NOTE: Choose that you don't have a product key when installing Windows, we'll just use the trial version of Windows 10 Education
 
-NOTE: If you do not see a hard drive to install Windows too it's possibly your hard drive controller is a model which does not have a driver built in to Windows 10. For example, Windows 10 does not have VirtIO drivers built in by default so it can't see any drives attached to a VirtIO controller. In this case you'll need to pick a different controller (which Windows does have built-in drivers for) to get Windows installed. VirtIO devices have better performance though which is why most hypervisors want you to use VirtIO by default. After installing Windows you can manually install drivers for VirtIO support, usually a hypervisor includes a set of drivers on a CD image you can install. VMware calls these additional drivers "VMware Tools", VirtualBox calles them "Guest Additions", Proxmox has the most unfriendly process of the three which involes installing a https://pve.proxmox.com/wiki/Qemu-guest-agent#Windows["qemu-guest-agent"] to support shutdown commands and https://pve.proxmox.com/wiki/Windows_VirtIO_Drivers["VirtIO Drivers"] to achieve the same results. VirtIO drivers are usually baked into Linux installers but must be done manually for Windows (or included in a custom Windows ISO but making one of those is outside the scope of this course).
+NOTE: If you do not see a hard drive to install Windows to it's possibly your hard drive controller is a model which does not have a driver built in to Windows 10. When you create the VM in Proxmox one of the wizard screens asks what OS you will be installing on the VM. Most virtualization software does this as it will automatically select virtual hardware which is supported by that guest operating system. It is like you did not select Windows (or version 10 of Windows) when creating the VM. While you could manually change all of the VM virtual hardware to devices supported by Windows 10 (or add drivers to Windows 10 which support the virtual hardware you are using) it is probably easier to delete the VM you created and create a new one with the correct guest OS selected. For example, Windows 10 does not have VirtIO drivers built in by default so it can't see any drives attached to a VirtIO controller. In this case you'll need to pick a different controller (which Windows does have built-in drivers for) to get Windows installed.
 --
-. Install the https://pve.proxmox.com/wiki/Windows_VirtIO_Drivers["VirtIO Drivers"] on your Windows guest system and then change the Windows system to use VirtIO as the hard disk SCSI controller which will improve performance.
+. Install the https://pve.proxmox.com/wiki/Windows_VirtIO_Drivers["VirtIO Drivers"] on your Windows guest system which will improve performance ad compatibiity with some of the virtual hardware.
 . Install the https://pve.proxmox.com/wiki/Qemu-guest-agent["qemu-guest-agent"] on both your Windows and Linux guest systems so that you can shut down and monitor the systems from Proxmox.
 . Safely shut down your Windows and Linux Mint guest systems
 . Safely shutdown your Proxmox VE servers
