itc2480 lab1 fix admin pc password

--- a/franske-course-information/modules/itc-2480/pages/lab1.adoc
+++ b/franske-course-information/modules/itc-2480/pages/lab1.adoc
@@ -197,7 +197,7 @@ A faster way to interact with your system is not through the Netlab local consol
 
 NOTE: This section assumes you are continuing from above and your virtual machine has not been powered off since you checked the IP address. Because your virtual machine is currently using a DHCP address a power off could mean it has a different IP address. If you have powered off your virtual machine you will need to connect to the local console in Netlab, start it back up, and check the IP address again (see above).
 
-NOTE: This section assumes the computer you are working from (your administration PC) is a Windows based system. However, there are SSH tools available for all modern operating systems if you are using a Mac or Linux system. For the purposes of this course we'll be giving instructions for Windows administration PCs so if you are using a Mac or Linux administration PC you have two choices. You can either figure out the SSH and SFTP tools needed on your own or you can use a Windows administation PC as a virtual machine through Netlab by clicking on the "Admin PC" tab in Netlab. The password for the "Admin PC User" account is "Password123".
+NOTE: This section assumes the computer you are working from (your administration PC) is a Windows based system. However, there are SSH tools available for all modern operating systems if you are using a Mac or Linux system. For the purposes of this course we'll be giving instructions for Windows administration PCs so if you are using a Mac or Linux administration PC you have two choices. You can either figure out the SSH and SFTP tools needed on your own or you can use a Windows administation PC as a virtual machine through Netlab by clicking on the "Admin PC" tab in Netlab. The password for the "Admin PC User" account is "password".
 
 NOTE: As mentioned earlier to keep things secure while you learn to setup a Linux server your Linux server is not directly accessible from the Internet. This means there is an extra step of connecting to the ITCnet Student VPN before attempting to access any devices on the 172.17.50.0/23 network (where your Linux server is). The only time this is not required is if your administration PC is already on the ITCnet network. For example you do not need to connect to the VPN if you are completing the lab from one of the ITC labs on campus and the computer you are using is plugged into an ITCnet connection or you are using the Windows administation PC as a virtual machine through Netlab. If one of these situations does not apply (such as if you are connecting directly from your home computer or from a laptop on the campus WiFi) you will need to connect to the VPN before opening an SSH session so that your system is on ITCnet.
 
