itc2516 change meetings to periodically for fa24

--- a/franske-course-information/modules/itc-2516/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2516/pages/assignments.adoc
@@ -96,7 +96,7 @@ Any participation activities completed in the course will go here. This falls in
 * Complete the online course feedback form (5 points for completing)
 * Complete the online practice final exam (10 points for attempting)
 * Complete the online Packet Tracer Practice Skills Assessment (10 points for attempting)
-* Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)
+* Meet with the instructor periodically to discuss course progress and ask questions (up to 10 points each based on progress, announcement made in class when meetings will happen)
 
 === Unit Assessments
 You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade. 
@@ -244,7 +244,7 @@ TIP: Discussion forum posts are usually worth a larger portion of your final gra
 * Complete the online course feedback form (5 points for completing)
 * Complete the online practice final exam (10 points for attempting)
 * Complete the online Packet Tracer Practice Skills Assessment - all parts (10 points for attempting)
-* Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)
+* Meet with the instructor periodically to discuss course progress and ask questions (up to 10 points each based on progress, announcement made in class when meetings will happen)
 
 === Unit Assessments
 You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade.
