add router switch info navigation

--- a/technical-information/modules/ROOT/navtop.adoc
+++ b/technical-information/modules/ROOT/navtop.adoc
@@ -4,6 +4,7 @@
 +
 --
 include::remote-access:partial$nav.adoc[]
+include::router-switch:partial$nav.adoc[]
 include::voip:partial$nav.adoc[]
 --
 * xref:software-info:ROOT:index.adoc[Software Discounts and Resources]
